--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "webhook-listner",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", 
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run build && node dist/index.js",
+    "build": "tsc -p tsconfig.json"
   },
   "author": "",
   "license": "ISC",
