--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build && node dist/index.js",
     "tsc": "./node_modules/typescript/bin/tsc",
-    "build": "npm i && tsc",
+    "build": "tsc",
     "postinstall": "npm run build"
   },
   "author": "",
