--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "typescript": "^4.8.4"
-  },
-  "devDependencies": {
+    "typescript": "^4.8.4",
     "@types/node": "^18.8.2"
   }
 }
