--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "typescript": "^4.8.4"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.14"
   }
 }
