--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./dist",
-    "allowJs": true,
-    "target": "ES2022",
+    "target": "es2021",
     "module": "commonjs",
     "typeRoots": ["./types", "./node_modules/@types"],
     "esModuleInterop": true,
