--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "axios": "^1.0.0",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "typescript": "^4.8.4"
-  },
-  "devDependencies": {
+    "typescript": "^4.8.4",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.14"
-  }
+  },
+  "devDependencies": {}
 }
